--- a/src/webparts/vueMock/VueMockWebPart.module.scss
+++ b/src/webparts/vueMock/VueMockWebPart.module.scss
@@ -1,4 +1,4 @@
-@import '~@microsoft/sp-office-ui-fabric-core/dist/sass/SPFabricCore.scss';
+// @import '~@microsoft/sp-office-ui-fabric-core/dist/sass/_SPFabricCore.scss';
 
 .vueMock {
   overflow: hidden;
@@ -6,7 +6,7 @@
   color: "[theme:bodyText, default: #323130]";
   color: var(--bodyText);
   &.teams {
-    font-family: $ms-font-family-fallbacks;
+    // font-family: $ms-font-family-fallbacks;
   }
 }
 
@@ -23,12 +23,12 @@
   a {
     text-decoration: none;
     color: "[theme:link, default:#03787c]";
-    color: var(--link); // note: CSS Custom Properties support is limited to modern browsers only
+    // color: var(--link); // note: CSS Custom Properties support is limited to modern browsers only
 
     &:hover {
       text-decoration: underline;
       color: "[theme:linkHovered, default: #014446]";
-      color: var(--linkHovered); // note: CSS Custom Properties support is limited to modern browsers only
+      // color: var(--linkHovered); // note: CSS Custom Properties support is limited to modern browsers only
     }
   }
 }
